--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -4,28 +4,28 @@
       <meta name="description" content="Projet d'édition numérique du roman-feuilleton les Fils de famille d'Eugène Sue (1856)">
       <meta name="keywords" content="edition, tei, xslt, chroniques, Jean, Froissart">
       <meta name="author" content="Humeau, Maxime">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script><title>Chroniques | Accueil</title>
+      <link rel="icon" type="image/png" href="img/brand.png">
       <link href="https://fonts.googleapis.com/css2?family=MedievalSharp" rel="stylesheet">
       <style>
-                        p.h1{
-                        font-family: 'MedievalSharp', cursive;
-                        }
-                        .h1, .h2, .h3, .h4, .h5{
-                        text-align: center;
-                        margin-bottom: 10px;
-                        }
-                    </style>
+                    p.h1{
+                    font-family: 'MedievalSharp', cursive;
+                    }
+                    .h1, .h2, .h3, .h4, .h5{
+                    text-align: center;
+                    margin-bottom: 10px;
+                    }
+                </style>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script><title>Chroniques | Accueil</title>
    </head>
    <body>
-      <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #4169E1;"><a class="navbar-brand" href="./homepage.html" style="margin-left: 1em;"><img class="d-inline-block" src="./img/brand.png" width="70" height="70" alt="">Accueil</a><div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #4169E1;"><a class="navbar-brand" href="./homepage.html" style="margin-left: 1em;"><img class="d-inline-block" src="./img/brand.png" width="60" height="60" alt="">Accueil</a><div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-               <li class="nav-item active"><a class="nav-link" href="{url_for('accueil')}">Accueil</a></li>
                <li class="nav-item dropdown nav-item"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Base de données
                      </a><div class="dropdown-menu" aria-labelledby="navbarDropdown"><a class="dropdown-item" href="{url_for('index_militant')}">Index des militants écologistes</a><a class="dropdown-item" href="{url_for('index_objContest')}">Index des projets contestés</a><div class="dropdown-divider"></div><a class="dropdown-item" href="{url_for('index_organisation')}">Index des Organisations</a></div>
                </li>
                <li class="nav-item"><a class="nav-link" href="{url_for('carte')}">Carte</a></li>
-               <li class="nav-item"><a class="nav-link" href="#">À propos</a></li>
+               <li class="nav-item"><a class="nav-link" href="./about.html">À propos</a></li>
             </ul>
          </div>
       </nav>
@@ -40,9 +40,9 @@
             </figure>
             <hr>
             <div style="text-align: left;">
-               <p class="h3">Presentation du travail éditorial</p>
+               <p class="h3">Préambule</p>
                <p>
-                  Ce travail d'édition scientifique a été produit dans le cadre du Master 2 <i>Technologies numériques appliquées à l'histoire</i> dispensé à l'Ecole nationale des Chartes. 
+                  Ce travail d'édition scientifique a été produit dans le cadre du Master 2 <i>Technologies numériques appliquées à l'histoire</i> dispensé à l'Ecole nationale des Chartes. L'encodage XML-TEI a été réalisé par Humeau, Maxime (Ecole nationale des chartes) sous la direction de Albouy, Ségolène (Observatoire de Paris | PSL).
                   Cette édition amène une lecture critique des Chroniques de Jean Froissart à partir
                   de trois témoins reprennant le tome 1 et 2.
                   <ul class="text-sm-start">
@@ -52,12 +52,21 @@
                         de France</li>
                   </ul>
                </p>
-               <p>Vous pouvez naviguer à travers le projet grâce à la barre de
-                  navigation en haut de cette page. Bonne visite !</p>
+               <p>Ce récit en prose de la fin du XIVe siècle contistue une source précieuse et inédite
+                  sur la guerre de Cent Ans (1337-1453) et les crises politiques au sein des monarchies
+                  occidentales durant le Bas Moyen-Age. Les <i><span style="color: #EF0107;">C</span>hroniques</i> s'ouvrent sur les événements qui ont précédé la déposition d'Édouard II en 1326 et
+                  couvrent la période allant jusqu'à 1400, en rapportant principalement les confictualités
+                  entre les royaumes britannique et français sous fond de crise de la féodalité.
+                  L'extrait traite de l'année 1328 où se déroule la succession du roi de France suite
+                  à la mort de Charles IV le Bel, qui dans le cadre de la loi revient à Philippe de
+                  Valois. Ce changement de maison royal intervient dans le cadre de la guerre de Cent
+                  Ans et d'une révolte des milices flamandes contre le comte de Flandre Louis de Nevers.
+                  La bataille de Cassel dont la victoire des armées du roi permet le rétablissement
+                  de l'autorité seigneuriale.</p>
+               <p>Bonne visite !</p>
             </div>
          </div>
-      </div>
-      <footer class="text-center text-dark fixed-bottom footer-transparent">
+      </div><br><br><br><footer class="text-center text-dark fixed-bottom footer-transparent">
          <div class="text-center p-1" style="background-color: #4169E1;">
             <p class="text-light">© MIT Licence | Humeau Maxime - 2022 : <a class="text-light" href="https://github.com/rayondemiel" target="_blank">Github</a></p>
          </div>
