--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -7,15 +7,28 @@
       <link rel="icon" type="image/png" href="img/brand.png">
       <link href="https://fonts.googleapis.com/css2?family=MedievalSharp" rel="stylesheet">
       <style>
-                    p.h1{
-                    font-family: 'MedievalSharp', cursive;
+                    .h1{
+                    text-align: center;
                     }
                     .h1, .h2, .h3, .h4, .h5{
-                    text-align: center;
-                    margin-bottom: 10px;
+                    margin: 10px;
+                    }
+                    div.button{
+                        display: flex;
+                        justify-content: center;
+                        margin : 10px;
                     }
                 </style>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script><title>Chroniques | Accueil</title>
+      <style>
+                        p.h1{
+                        font-family: 'MedievalSharp', cursive;
+                        }
+                        .h1, .h3{
+                        text-align: center;
+                        margin-bottom: 10px;
+                        }
+                    </style>
    </head>
    <body>
       <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #4169E1;"><a class="navbar-brand" href="./homepage.html" style="margin-left: 1em;"><img class="d-inline-block" src="./img/brand.png" width="60" height="60" alt="">Accueil</a><div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -24,7 +37,7 @@
                      Base de données
                      </a><div class="dropdown-menu" aria-labelledby="navbarDropdown"><a class="dropdown-item" href="{url_for('index_militant')}">Index des militants écologistes</a><a class="dropdown-item" href="{url_for('index_objContest')}">Index des projets contestés</a><div class="dropdown-divider"></div><a class="dropdown-item" href="{url_for('index_organisation')}">Index des Organisations</a></div>
                </li>
-               <li class="nav-item"><a class="nav-link" href="{url_for('carte')}">Carte</a></li>
+               <li class="nav-item"><a class="nav-link" href="./manifeste.html">notices</a></li>
                <li class="nav-item"><a class="nav-link" href="./about.html">À propos</a></li>
             </ul>
          </div>
@@ -36,7 +49,7 @@
             <figure><a href="https://gallica.bnf.fr/ark:/12148/btv1b84386043/f476.item"><img class="rounded mx-auto d-block" src="./img/jacquerie.jpg" style="width: 38rem; height: auto"></a><figcaption style="text-align:center; margin-top: 1em;  font-size: 12px"> Tandis qu'ils tentent de prendre la forteresse du marché de Meaux où est retranchée
                   la famille du dauphin Charles, les jacques et leurs alliés parisiens sont surpris
                   par une charge de chevalerie de Gaston Phébus et Jean de Grailli (9 juin 1358). Jean
-                  Froissart, <i>Chroniques</i>, Flandre, Bruges, XVe s., folio 226, verso (BNF, ms. Français 2643).</figcaption>
+                  Froissart, <i><span style="color: #EF0107;">C</span>hroniques</i>, Flandre, Bruges, XVe s., folio 226, verso (BNF, ms. Français 2643).</figcaption>
             </figure>
             <hr>
             <div style="text-align: left;">
