--- a/HTML/manifeste.html
+++ b/HTML/manifeste.html
@@ -7,97 +7,45 @@
       <link rel="icon" type="image/png" href="img/brand.png">
       <link href="https://fonts.googleapis.com/css2?family=MedievalSharp" rel="stylesheet">
       <style>
-                    .h1{
-                    text-align: center;
-                    }
-                    .h1, .h2, .h3, .h4, .h5{
-                    margin: 10px;
-                    }
-                    div.button{
-                        display: flex;
-                        justify-content: center;
-                        margin : 10px;
-                    }
-                </style>
+            .h1 {
+                text-align: center;
+            }
+            .h1,
+            .h2,
+            .h3,
+            .h4,
+            .h5 {
+                margin: 10px;
+            }
+            div.button {
+                display: flex;
+                justify-content: center;
+                margin: 10px;
+            }
+            span.subtitle {
+                margin: 1em;
+                margin-right: 3em;
+                background-color: #F0EFF0;
+            }
+        </style>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script><title>Chroniques | manifeste</title>
    </head>
    <body>
       <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #4169E1;"><a class="navbar-brand" href="./homepage.html" style="margin-left: 1em;"><img class="d-inline-block" src="./img/brand.png" width="60" height="60" alt="">Accueil</a><div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-               <li class="nav-item dropdown nav-item"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     Base de données
-                     </a><div class="dropdown-menu" aria-labelledby="navbarDropdown"><a class="dropdown-item" href="{url_for('index_militant')}">Index des militants écologistes</a><a class="dropdown-item" href="{url_for('index_objContest')}">Index des projets contestés</a><div class="dropdown-divider"></div><a class="dropdown-item" href="{url_for('index_organisation')}">Index des Organisations</a></div>
+               <li class="nav-item dropdown nav-item"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Base de données </a><div class="dropdown-menu" aria-labelledby="navbarDropdown"><a class="dropdown-item" href="{url_for('index_militant')}">Index des
+                        militants écologistes</a><a class="dropdown-item" href="{url_for('index_objContest')}">Index
+                        des projets contestés</a><div class="dropdown-divider"></div><a class="dropdown-item" href="{url_for('index_organisation')}">Index
+                        des Organisations</a></div>
                </li>
                <li class="nav-item"><a class="nav-link" href="./manifeste.html">notices</a></li>
                <li class="nav-item"><a class="nav-link" href="./about.html">À propos</a></li>
             </ul>
          </div>
-      </nav>
-      <div id="NY" class="container">
-         <h1 class="p-3">Manuscrit <em>
-               (MS M.804)
-               </em></h1>
-         <div class="row">
-            <div class="card col-md-3 col-sm-5 p-3">
-               <div id="general" class="text-center">
-                  <h4>Morgan Library</h4>
-                  <p>
-                     <dl>
-                        <dt>Departement</dt>
-                        <dd>Instance de conservation</dd>
-                        <dt>Collection</dt>
-                        <dd>Medieval and Renaissance Manuscripts</dd>
-                        <dt>Localisation</dt>
-                        <dd>Etats-Unis, New York City</dd>
-                     </dl>
-                  </p>
-               </div>
-               <hr>
-               <div id="id" class="p-1">
-                  <h5>Identifiants</h5>
-                  <p><b>Cote : MS M.804</b></p>
-                  <p><a href="https://www.themorgan.org/manuscript/147009" target="_blank">Lien</a></p>
-               </div>
-               <hr>
-               <div id="summary" class="p-1">
-                  <h5>Sommaire</h5>
-                  <div class="container"></div>
-               </div>
-            </div>
-            <div class="container col-md-8 col-sm-7">
-               <h3>Chroniques</h3>
-               <div class="container">
-                  <p>Language batard entre le dialecte burgond et picard Language batard entre le dialecte
-                     burgond et picard - <b>Estimé entre 1412 et 1415</b><br></p>
-                  <hr>
-                  <div id="extrait" class="p-1">
-                     <h5>Extrait</h5>
-                     <div class="container">
-                        <p>"<i style="color: #EF0107;">La mort du roy Charles de France et du commencement du roy Phelippe de Valois.</i>" - Folio 15 verso au folio 16 verso du livre 1
-                           <dl>
-                              <dt>Incipit</dt>
-                              <dd><i>"Le roy Charles de France, filz au beau roy Phelippe fu III fois mariéz, et si mouru
-                                    sans hoir masle dont ce fu dommage pour le royaume, si comme vous orréz cy aprés."</i></dd>
-                              <dt>Explicit</dt>
-                              <dd><i>"Or nous tairons un petit de lui et parlerons des ordonnances d’Engleterre et du gouvernement
-                                    du roy."</i></dd>
-                              <dt></dt>
-                              <dd></dd>
-                           </dl>
-                        </p>
-                     </div>
-                  </div>
-                  <hr>
-                  <div id="resp" class="p-1">
-                     <h5>Intervenants</h5>
-                     <div class="container">De Bailly, Guillaume</div>
-                  </div>
-                  <hr>
-                  <div id="colophon" class="p-1">
-                     <h5>Colophon</h5>
-                     <div class="container"><em></em></div>
-                  </div>
-                  <hr>
-                  <div id="physDesc" class="p-1">
-                     <h3>Description matérielle</h3>
-                     <div class="container"><b>Support</b> : Papier<br><b>Dimension</b> : largeur : mm ; longueur : mm<br><b>Foliotation</b> : Le livre illustré est divisée en 2 tomes, contenant au total 363 feuilles.<br><b>Mise en page</b>
+      </nav><br><br><br><footer class="text-center text-dark fixed-bottom footer-transparent">
+         <div class="text-center p-1" style="background-color: #4169E1;">
+            <p class="text-light">© MIT Licence | Humeau Maxime - 2022 : <a class="text-light" href="https://github.com/rayondemiel" target="_blank">Github</a></p>
+         </div>
+      </footer>
+   </body>
+</html>
