--- a/HTML/about.html
+++ b/HTML/about.html
@@ -15,7 +15,7 @@
             .h3,
             .h4,
             .h5 {
-                margin: 10px;
+                margin: 2em;
             }
             div.button {
                 display: flex;
@@ -26,8 +26,7 @@
                 margin: 1em;
                 margin-right: 3em;
                 background-color: #F0EFF0;
-            }
-        </style>
+            }</style>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script><title>Chroniques | A propos</title>
    </head>
    <body>
@@ -35,10 +34,11 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                <li class="nav-item dropdown nav-item"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Base de données </a><div class="dropdown-menu" aria-labelledby="navbarDropdown"><a class="dropdown-item" href="{url_for('index_militant')}">Index des
                         militants écologistes</a><a class="dropdown-item" href="{url_for('index_objContest')}">Index
-                        des projets contestés</a><div class="dropdown-divider"></div><a class="dropdown-item" href="{url_for('index_organisation')}">Index
+                        des projets contestés</a><a class="dropdown-item" href="{url_for('index_organisation')}">Index
                         des Organisations</a></div>
                </li>
-               <li class="nav-item"><a class="nav-link" href="./manifeste.html">notices</a></li>
+               <li class="nav-item"><a class="nav-link" href="./index.html">Index</a></li>
+               <li class="nav-item"><a class="nav-link" href="./manifeste.html">Notices</a></li>
                <li class="nav-item"><a class="nav-link" href="./about.html">À propos</a></li>
             </ul>
          </div>
