--- a/HTML/manifeste.html
+++ b/HTML/manifeste.html
@@ -26,6 +26,7 @@
                 margin: 1em;
                 margin-right: 3em;
                 background-color: #F0EFF0;
+                color: #000000;
             }
             div.entity_block {
                 margin-top: 1em;
@@ -35,8 +36,10 @@
             }
             span.colonne {
                 text-align: center;
-                }
-        </style>
+            }
+            p.titre {
+                color: #EF0107;
+            }</style>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script><title>Chroniques | manifeste</title>
    </head>
    <body>
@@ -113,7 +116,7 @@
                         <hr>
                         <div id="resp" class="p-1">
                            <h5>Intervenants</h5>
-                           <div class="container">Froissart, Jehan</div>
+                           <div class="container">Froissart, Jehan</div><br><p>Manuscrit associé : 0</p>
                         </div>
                         <hr>
                         <div id="physDesc" class="p-1">
@@ -202,7 +205,7 @@
                         <hr>
                         <div id="resp" class="p-1">
                            <h5>Intervenants</h5>
-                           <div class="container">De Bailly, Guillaume</div>
+                           <div class="container">De Bailly, Guillaume</div><br><p>Manuscrit associé : 2</p>
                         </div>
                         <hr>
                         <div id="physDesc" class="p-1">
@@ -323,7 +326,7 @@
                         <hr>
                         <div id="resp" class="p-1">
                            <h5>Intervenants</h5>
-                           <div class="container">Froissart, Jean</div>
+                           <div class="container">Froissart, Jean</div><br><p>Manuscrit associé : 2</p>
                         </div>
                         <hr>
                         <div id="physDesc" class="p-1">
